# hamld

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
data/: README.md  test_read.py
data/raw/: surface_code_noisy_circuit_generation.py  surface_code_rotated_memory_z_d5_r10_acdp0.001_arfp0.0001_bmfp0.005_brddp0.001.stim
experiment/: README.md
experiment/eamld_paper_experiment/code/: README.md  (+17 more)
experiment/hamld_paper_experiment/: README.md
experiment/tesseract_experiment/: qldpc_code.py  surface_code.py
src/: README.md
src/cpp/: .bazelrc  BUILD  MODULE.bazel  WORKSPACE  bazel_downloader.cfg
src/eamld/: __init__.py  circuit_generator.py  eamld.py  eamld_utility.py  sample_decoder.py
src/hamld/: __init__.py  config.py  hamld.py  hamld_utility.py  logging_config.py
tests/: README.md  test_circuit_generator_bb_code.ipynb  test_contraction.ipynb  test_logging_config.py  test_logical_hyperedge2decoder.ipynb
tests/bbcode/: r=10,d=10,p=0.001,noise=si1000,c=bivariate_bicycle_Z,nkd=[[108,8,10]],q=216,iscolored=True,A_poly=x^3+y+y^2,B_poly=y^3+x+x^2.stim  r=10,d=10,p=0.001,noise=si1000,c=bivariate_bicycle_Z,nkd=[[90,8,10]],q=180,iscolored=True,A_poly=x^9+y+y^2,B_poly=x^7+1+x^2.stim  r=12,d=12,p=0.001,noise=si1000,c=bivariate_bicycle_Z,nkd=[[144,12,12]],q=288,iscolored=True,A_poly=x^3+y+y^2,B_poly=y^3+x+x^2.stim  r=18,d=18,p=0.001,noise=si1000,c=bivariate_bicycle_Z,nkd=[[288,12,18]],q=576,iscolored=True,A_poly=x^3+y^2+y^7,B_poly=y^3+x+x^2.stim  r=24,d=24,p=0.001,noise=si1000,c=bivariate_bicycle_Z,nkd=[[360,12,24]],q=720,iscolored=True,A_poly=x^9+y+y^2,B_poly=y^3+x^25+x^26.stim  (+1 more)
tutorial/: EAMLD_Tutorial.ipynb  HAMLD_Tutorial.ipynb  README.md  Sample_Decoder.ipynb  contraction_tree.ipynb  dem_to_hypergraph_to_connectivity_graph.ipynb  google_24_circuit.ipynb  greedy_contraction_order_finder.ipynb  qldpc_code_test.ipynb  qldpc_contraction_analysis.ipynb  qldpc_hierarchical_contraction.ipynb  qldpc_priorty_contraction.ipynb  slice_finder.ipynb
(+167 files in other folders)
