[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/hamld/__init__.py"

[project]
name = "hamld"
dynamic = ["version"]
license = {text = "MIT"}  # license
authors = [
  {name="Ke Chen"}
]
description = "Circuit-level quantum error decoding using Hypergraph-based Approximate Maximum Likelihood (HAMLD)"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "stim",
    "sinter",
    "numpy",
    "networkx",
    "matplotlib",
    "pandas",
    "jupyter"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/kechen666/hamld.git"
Issues = "https://github.com/kechen666/hamld/issues"

[tool.hatch.build]
# 包含所有 .so 文件
include = [
    "src/hamld/*.so"
]

[tool.hatch.build.targets.wheel]
packages = ["src/hamld"]